--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 .result {
-    height: 440px;
+    height: 520px;
     width: 100%;
 }
 
@@ -18,12 +18,38 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    padding: 0 0 -48px 0;
+}
+
+.player-choices-winner {
+    transform: scale(1.1);
+    border: 2px solid rgb(109, 134, 76);
+    border-radius: 8px;
 }
 
 .player-choices > div {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.player-choices > div > div {
     height: 200px;
     width: 200px;
     background-color: rgb(55, 55, 55);
+    font-size: 48px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    transition: transform .2s;
+}
+
+.round-result {
+    height: 24px;
+    margin-top: 56px;
+    color:rgb(212, 212, 212);
+    font-size: 24px;
 }
 
 .current-score {
@@ -51,7 +77,7 @@ body {
     padding: 20px 0 0 0;
 }
 
-.selection {
+.button-holder > button {
     height: 120px;
     width: 120px;
     padding: 16px 16px;
@@ -60,4 +86,32 @@ body {
     border-radius: 16px;
     background-color: rgb(109, 134, 76);
 
+}
+
+.button-holder > button:hover {
+    height: 120px;
+    width: 120px;
+    padding: 16px 16px;
+    font-size: 36px;
+    border: 2px solid rgb(67, 77, 43);
+    border-radius: 16px;
+    background-color: rgb(91, 105, 58);
+
+}
+
+.hide-buttons {
+    visibility:hidden;
+}
+
+.paper-font {
+    font-size: 24px !important;
+    color:rgb(24, 24, 24);
+}
+
+h1 {
+    padding: 8px;
+    color:rgb(212, 212, 212);
+    background-color:rgb(62, 62, 62);
+    text-align: center;
+    white-space: nowrap;
 }
